# device-fulfillment

device-fulfillment/: .gitignore  LICENSE.txt  README.md  pyproject.toml
device-fulfillment/src/: main.py  utils.py
device-fulfillment/src/device_fulfillment/: __about__.py  check_inventory.html  contact_info.py  data_manager.py  email_manager.py  parsers.py  path_manager.py  validators.py
device-fulfillment/src/interface/: cli.py  logic.py  parser.py  parsers.py  session_manager.py  theme.py  validators.py
device-fulfillment/tests/: __init__.py
