[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "device-fulfillment"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Benji Hix", email = "benji.hix@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Benji Hix/device-fulfillment#readme"
Issues = "https://github.com/Benji Hix/device-fulfillment/issues"
Source = "https://github.com/Benji Hix/device-fulfillment"

[tool.hatch.version]
path = "src/device_fulfillment/__about__.py"

[tool.hatch.envs.default]
path = ".hatch"
dependencies = [
  "pandas",
  "openpyxl",
  "pywin32",
  "rich",
  "prompt_toolkit"
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/device_fulfillment tests}"

[tool.coverage.run]
source_pkgs = ["device_fulfillment", "tests"]
branch = true
parallel = true
omit = [
  "src/device_fulfillment/__about__.py",
]

[tool.coverage.paths]
device_fulfillment = ["src/device_fulfillment", "*/device-fulfillment/src/device_fulfillment"]
tests = ["tests", "*/device-fulfillment/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.flake8-quotes]
inline-quotes = "single"